--- a/src/components/shop/shop.component.html
+++ b/src/components/shop/shop.component.html
@@ -2,7 +2,7 @@
   <div class="container">
     <main>
       <products-root></products-root>
-      <shopcategories></shopcategories>
+      <shopcategories-root></shopcategories-root>
     </main>
   </div>
 </div>
