--- a/src/components/shop/products/products.component.scss
+++ b/src/components/shop/products/products.component.scss
@@ -6,17 +6,36 @@
       vertical-align: top;
       display: inline-block;
       padding: 5px;
-      width: 28%;
-      
+      width: 40%;
+
       img{
         width: 100%;
         height: auto;
+        transition: opacity .5s ease-out; 
+      }
+
+      hr{
+        max-width: 20%;
+        border-top: 2px solid #c9c9c9;
       }
       
       .info{
+        text-align: center;
         padding: 10px 0px;
         h4{
           cursor: pointer;
+        }
+        h4,
+        h5{
+          padding: 5px 0px;
+        }
+        a{
+          display: block;
+          width: 40%;
+          margin: 0 auto;
+          padding: 5px 25px;
+          color: #fff;
+          background: #3e9b93;
         }
       }
     }
