--- a/src/components/shop/product/product.component.html
+++ b/src/components/shop/product/product.component.html
@@ -1,24 +1,15 @@
 <div class="container">
     <div class="product" *ngIf=product>
-       <div class="image-wrapper">
+        <div class="image-wrapper">
           <div class="product-image">
-             <img [src]=sanitizeSrc(product.images[0]) alt="product">
+             <img [src]=sanitizeSrc(product.images[imagesChoosen]) alt="product">
              <div class="lens">
                 <i class="fa fa-search-plus"></i>
              </div>
           </div>
           <div class="sub-images">
-        
-            <div class="images-scroll">
-              <img *ngFor="let image of product.images" src="{{image}}" alt="sub-images">
+            <img *ngFor="let image of product.images" [src]=sanitizeSrc(image) alt="" #images (click)="changeImage($event)" [attr.data-images]="product.images">
             </div>
-            <div class="to-left">
-                <i class="fa fa-angle-left" #left></i>
-              </div>
-            <div class="to-right">
-              <i class="fa fa-angle-right" #right></i>
-            </div>
-          </div>
        </div>
        <div class="product-details">
           <h1>{{product.name}}</h1>
@@ -32,7 +23,7 @@
                 <span><i class="fa fa-angle-down" (click)="quantityHandler($event)" id="minus"></i></span>
              </div>
           </div>
-          <a href="#"><i class="fa fa-shopping-cart"></i> Checkout</a>
+          <a (click)="onCheckout()"><i class="fa fa-shopping-cart"></i> Checkout</a>
           <div class="share-links">
              <p>Share</p>
              <div class="facebook">
