--- a/src/components/home/featured/featured.component.scss
+++ b/src/components/home/featured/featured.component.scss
@@ -68,6 +68,14 @@
   }
 }
 @media screen and (max-width: 768px) {
+  .container{
+    h2{
+      font-size: 1.2rem;
+      &:after, &::before{
+        width: 70px;
+      }
+    }
+  }
   .weekly-products{
     margin: 60px 0px 10px 0px !important;
     .product{
