--- a/src/components/shop/product/product.component.scss
+++ b/src/components/shop/product/product.component.scss
@@ -3,15 +3,19 @@
   position: relative;
   margin: 5% 0;
   .image-wrapper{
-    height: 300px;
-    width: 400px;
+    height: 350px;
+    width: 500px;
     display: inline-block;
+
     .product-image{
       position: relative;
+      width: 80%;
+      float: right;
   
       img{
         width: 100%;
         height: 100%;
+        transition: all .5s ease-in-out;
       }
   
       .lens{
@@ -43,46 +47,18 @@
       }
     }
     .sub-images{
-
-      .to-left, .to-right {
-        height: 100%;
-        width: 30px;
-        display: inline-block;
-        position: relative;
-
-        i{
-          transform: translate(-50%, -50%);
-          position: absolute;
-          left: 50%;
-          top: 50%;
-          padding: 5px;
-          border: 1px solid #eeeeee;
-        }
-      }
-      .to-left{
-        float: left;
-      }
-      .to-right{
-        float: right;
-      }
-      .images-scroll{
-        display:  block;
-        width: 80%;
-        margin: 0 auto;
-        height: 100%;
-        white-space: nowrap;
-        overflow: hidden;
-        clear: both;
-
-        img{
-          height: 100px;
-          width: 130px;
-          margin: 10px;
+      float: left;
+      img{
+        display: block;
+        height: 50px;
+        width: 65px;
+        margin: 15px 15px;
+        &:nth-child(1) {
+        margin-top: 0px;
         }
       }
     }
   }
-
     
   .product-details{
     display: inline-block;
