--- a/src/components/checkout/checkout.component.html
+++ b/src/components/checkout/checkout.component.html
@@ -1,44 +1,49 @@
 <div class="container">
-  <h1>Your Shopping Bag</h1>
-  <div class="row">
-    <hr>
-    <div class="head">
-        <div class="col">
+  <div class="no-products" *ngIf="checkouts?.length === 0">
+    <h1>No Checkouts</h1>
+  </div>
+  <div class="checkouts" *ngIf="checkouts?.length !== 0">
+      <h1>Your Shopping Bag</h1>
+      <div class="row">
+        <hr>
+        <div class="head">
+            <div class="col">
+            </div>
+            <div class="col">
+              <h3>Description</h3>
+            </div>
+            <div class="col">
+              <h3>Price</h3>
+            </div>
+            <div class="col">
+              <h3>Quantity</h3>
+            </div>
+            <div class="col">
+              <h3>Total Price</h3>
+            </div>
         </div>
-        <div class="col">
-          <h3>Description</h3>
+        <hr>
+        <div class="body" *ngFor="let checkout of checkouts">
+          <div class="col">
+            <img [src]=sanitizeSrc(checkout.images[0]) alt="product image">
+          </div>
+          <div class="col">
+            <h3>{{checkout.name}}</h3>
+            <h4>Size 18</h4>
+            <h4>In Stock</h4>
+          </div>
+          <div class="col">
+            <h3>£{{checkout.originalprice}}</h3>
+          </div>
+          <div class="col">
+          <a href="#"><i class="fa fa-trash"></i></a>
+          <input type="number" min="1" value="{{checkout.quantity}}">
+          </div>
+          <div class="col">
+            <h3>£{{checkout.totalprice}}</h3>
+            <h5>(20% Inc. VAT)</h5>
+          </div>
         </div>
-        <div class="col">
-          <h3>Price</h3>
-        </div>
-        <div class="col">
-          <h3>Quantity</h3>
-        </div>
-        <div class="col">
-          <h3>Total Price</h3>
-        </div>
-    </div>
-    <hr>
-    <div class="body">
-      <div class="col">
-        <img src="https://www.itsmechristian.co.uk/images/shirt/black-lace-blouse/7adc63d06b0ee604e74c2ff4e52bd020.jpg" alt="">
       </div>
-      <div class="col">
-        <h3>Lorem ipsum dolor sit amet.</h3>
-        <h4>Size 18</h4>
-        <h4>In Stock</h4>
-      </div>
-      <div class="col">
-        <h3>£30.00</h3>
-      </div>
-      <div class="col">
-      <a href="#"><i class="fa fa-trash"></i></a>
-      <input type="number" min="1" value="1">
-      </div>
-      <div class="col">
-        <h3>£40.00</h3>
-        <h5>(20% Inc. VAT)</h5>
-      </div>
-    </div>
   </div>
 </div>
