--- a/src/components/shop/product/product.component.scss
+++ b/src/components/shop/product/product.component.scss
@@ -5,7 +5,6 @@ h1{
 
 .product{
   display: block;
-  position: relative;
   margin: 5% 0;
 
   .image-wrapper{
@@ -191,6 +190,34 @@ h1{
       }
     }
   }
+  
+  .modal{
+    z-index: 999;
+    top: 0;
+    left: 0;
+    position: fixed;
+    height: 100%;
+    width: 100%;
+
+    .square{
+      position: absolute;
+      height: 600px;
+      width: 400px;
+      background: #fff;
+      opacity: 1;
+      top: 50%;
+      left: 50%;
+      z-index: 999;
+
+    }
+    .overlay{
+      position: relative;
+      top: 0;
+      height: 100%;
+      width: 100%;
+      background: #000;
+    }
+  }
 }
 .similar-product{
   margin: 15px 0px;
@@ -200,11 +227,28 @@ h1{
   }
   
   .wrapper{
-    width: 90%;
+    margin: 0 auto;
+    width: 95%;
     
-    img{
-      height: 200px;
-      width: 250px;
+    .product{
+      margin: 15px;
+      display: inline-block;
+      max-width: 300px;
+
+      img{
+        height: 200px;
+        width: 300px;
+      }
+      h3{
+        white-space: nowrap;
+        text-overflow: ellipsis;
+        overflow: hidden;
+
+        &:nth-child(1) {
+          color: #999999;
+        }
+        color: #333;
+      }
     }
   }
 }
